# frequency_model

./: README.md  pyproject.toml
data/: other_liability_data.csv  other_liability_data_clean.csv
src/frequency_model/: __init__.py  get_data.py  model1.py  model_dev.ipynb
