[project]
name = "frequency-model"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Andy Weaver", email = "andrewayersweaver+github@gmail.com" }
]
dependencies = [
    "pandas>=2.2.2",
    "polars>=1.7.1",
    "duckdb>=1.1.0",
    "pymc>=5",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "arviz>=0.19.0",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/frequency_model"]
